--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "truffle": "^5.1.34"
+    "truffle": "^5.1.34",
+    "truffle-assertions": "^0.9.2"
   }
 }
