--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "truffle": "^5.1.34",
     "truffle-assertions": "^0.9.2",
     "web3": "^1.2.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
     "ganache-cli": "^6.9.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
