--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "3box": "^1.22.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "truffle": "^5.1.34",
