--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "3box": "^1.22.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "rimble-ui": "^0.14.0",
+    "styled-components": "^5.2.0",
     "truffle": "^5.1.34",
     "truffle-assertions": "^0.9.2",
     "web3": "^1.2.11"
