--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "bignumber": "^1.1.0",
     "ganache-cli": "^6.9.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
